primera version de mi web personal

--- a/index.html
+++ b/index.html
@@ -1,12 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hola</title>
-</head>
-<body>
-    <H1>Yo Soy</H1>
-</body>
+<html>
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <title>Yo Soy</title>
+        <meta name="description" content="">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="">
+    </head>
+    <body>
+        <h1>Probando VSC</h1>
+        <h2>Utilizando Live Server</h2>
+        <h2>Actualizacion dinámica</h2>
+        <H2>Hubert Arturo Enriquez Chavez</H2>
+        <h3>(c) EAPIS 2021</h3>
+        
+        <script src="" async defer></script>
+    </body>
 </html>
