Se agrega un nuevo titulo

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <h2>Actualizacion dinámica</h2>
         <H2>Hubert Arturo Enriquez Chavez</H2>
         <h3>(c) EAPIS 2021</h3>
+        <h3>haciendo mas cambios</h3>
         
         <script src="" async defer></script>
     </body>
