--- a/index.html
+++ b/index.html
@@ -51,6 +51,11 @@
         </aside>
 
         <footer>
+            <h4>Avisos legales</h4>
+            <a href="https://iso25000.com/index.php/politica-cookies">Política de cookies</a>
+            <h4>Redes sociales</h4>
+            <a href="https://www.facebook.com/R33333333333">Mi Facebook</a>
+        
             <h3>&copy; Hubert Arturo Enriquez Chavez</h2>
         </footer>
 
