--- a/index.html
+++ b/index.html
@@ -30,7 +30,10 @@
           </section>
         
         <section id="main">
-            <h1>Contenido principal de la página web</h1>
+            <h1>Hola mucho gusto en saludarte</h1>
+            <article>
+                <textarea name="presentacion" cols="70" rows="5">Es un gusto saludarte, mi nombre es Arturo Enriquez y estudio ingeniería de Sistemas. Disfruten de la página </textarea>
+            </article>
             <p>stibulum ante ipsum primis in faucibus 
                 orci luctus et ultrices posuere cubilia 
                 Curae; Nulla mollis dapibus nunc, ut 
