--- a/index.html
+++ b/index.html
@@ -32,16 +32,9 @@
         <section id="main">
             <h1>Hola mucho gusto en saludarte</h1>
             <article>
-                <textarea name="presentacion" cols="70" rows="5">Es un gusto saludarte, mi nombre es Arturo Enriquez y estudio ingeniería de Sistemas. Disfruten de la página </textarea>
+                <textarea name="presentacion" cols="70" rows="5">Es un gusto saludarte, mi nombre es Arturo Enriquez y estudio ingeniería de Sistemas. He creado este sitio web para compartir con ustedes aprendizajes y experiencias de la vida. Así que disfruten de la página </textarea>
             </article>
-            <p>stibulum ante ipsum primis in faucibus 
-                orci luctus et ultrices posuere cubilia 
-                Curae; Nulla mollis dapibus nunc, ut 
-                rhoncus turpis sodales quis. Integer
-                sit amet mattis quam.Vestibulum 
-                ante ipsum primis in faucibus orci 
-                luctus et ultrices posuere cubilia 
-                Curae; Nulla mollis dapibus nunc</p>
+            
         </section>
 
         <aside>
