--- a/contact.html
+++ b/contact.html
@@ -27,6 +27,7 @@
                 <option value="femenino">Femenino</option>
             </select>
 
+            <input type="submit" value="Enviar">
 
         </form>
         <script src="" async defer></script>
