--- a/contact.html
+++ b/contact.html
@@ -25,7 +25,7 @@
             <select>
                 <option value="masculino">Masculino</option>
                 <option value="femenino">Femenino</option>
-            </select>
+            </select> <br/>
 
             <input type="submit" value="Enviar">
 
