--- a/contact.html
+++ b/contact.html
@@ -28,6 +28,7 @@
             </select> <br/>
 
             <input type="submit" value="Enviar">
+            <input type="reset" value="Borrar">
 
         </form>
         <script src="" async defer></script>
