favicon y cuadro de texto

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="">
+        <link rel="icon" href="images/mifavicon.jpg"/>
     </head>
     <body>
         <header>
@@ -30,7 +31,8 @@
           <hr/>
             <h1>Hola mucho gusto en saludarte</h1>
             <article>
-                <textarea name="presentacion" cols="70" rows="4">Es un gusto saludarte, mi nombre es Arturo Enriquez y estudio ingeniería de Sistemas. He creado este sitio web para compartir con ustedes aprendizajes y experiencias de la vida. Así que disfruten de la página </textarea>
+                <h3>Presentacion</h2>
+                    <p>Es un gusto saludarte, mi nombre es Arturo Enriquez y estudio ingeniería de Sistemas. He creado este sitio web para compartir con ustedes aprendizajes y experiencias de la vida. Así que disfruten de la página</p>
             </article>
             
         </section>
