--- a/contact.html
+++ b/contact.html
@@ -8,6 +8,7 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="">
+        <link rel="icon" href="images/mifavicon.jpg"/>
     </head>
     <body>
         <h1>Ingrese sus datos para contactarse lo antes posible</h1>
