--- a/home.html
+++ b/home.html
@@ -11,6 +11,23 @@
         <link rel="icon" href="images/mifavicon.jpg"/>
     </head>
     <body>
+
+        <header>
+            <h1>Bienvenid@ a mi sitio web</h1>
+        </header>
+
+        <section id="main">
+            <hr/>
+              <h1>Hola mucho gusto en saludarte</h1>
+              <article>
+                  <h3>Presentacion</h2>
+                      <p>Es un gusto saludarte, mi nombre es Arturo Enriquez y estudio ingeniería de Sistemas. He creado este sitio web para compartir con ustedes aprendizajes y experiencias de la vida. Así que disfruten de la página</p>
+              </article>
+              
+          </section>
+                         
+  
+  
         <script src="" async defer></script>
     </body>
 </html>
