--- a/contact.html
+++ b/contact.html
@@ -38,6 +38,12 @@
             <input type="reset" value="Borrar">
 
         </form>
+
+        <section>
+            <h4>Mi correo: </h4>
+            <a href=“mailto:henriquezc15_2@unc.edu.pe”>henriquezc15_2@unc.edu.pe</a>
+        </section>
+
         <script src="" async defer></script>
     </body>
 </html>
