--- a/contact.html
+++ b/contact.html
@@ -42,6 +42,10 @@
         <section>
             <h4>Mi correo: </h4>
             <a href=“mailto:henriquezc15_2@unc.edu.pe”>henriquezc15_2@unc.edu.pe</a>
+       
+            <h4>Redes sociales</h4>
+            <a href="https://www.facebook.com/R33333333333">Mi Facebook</a>
+       
         </section>
 
         <script src="" async defer></script>
