--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
        <hr/> 
         <aside>
             <h3>Banner de publicidad de autos</h3>
+            <p>haz click en la imagen</p>
             <a href="https://www.ferrari.com/es-ES">
               <img src="https://pbs.twimg.com/profile_images/661864962441261057/qUCqpT4n.jpg" alt="banner de publicidad">
             </a>
