--- a/contact.html
+++ b/contact.html
@@ -48,6 +48,11 @@
        
         </section>
 
+        <footer>
+                    
+            <h5>&copy; Hubert Arturo Enriquez Chavez</h5>
+        </footer>
+
         <script src="" async defer></script>
     </body>
 </html>
