--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <link rel="stylesheet" href="">
         <link rel="icon" href="images/mifavicon.jpg"/>
     </head>
+
     <body>
         <header>
             <h1> Mi página web personal  </h1>
@@ -37,6 +38,12 @@
             </a>
             <h3>Testimonios</h3>
             <p>Me gusta mucho esta página.</p>
+            <h3>Video de autos</h3>
+                <video width="320" height="240" controls>
+                    <source src="images/movie.mp4" type="video/mp4">
+                    <source src="images/movie.ogg" type="video/ogg">
+                    Tu navegador no puede mostrar el vídeo.
+                </video>
         </aside>
 
         <footer>
