midificacion link ferrari

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <aside>
             <h3>Banner de publicidad de autos</h3>
             <p>haz click en la imagen</p>
-            <a href="https://www.ferrari.com/es-ES">
+            <a href="https://www.autobild.es/coches/ferrari">
               <img src="https://pbs.twimg.com/profile_images/661864962441261057/qUCqpT4n.jpg" alt="banner de publicidad">
             </a>
             <h3>Testimonios</h3>
