--- a/home.html
+++ b/home.html
@@ -26,7 +26,10 @@
 
                 <tr>
                     <td> Es un gusto saludarte, mi nombre es Arturo Enriquez y estudio ingeniería de Sistemas. </br>
-                        He creado este sitio web para compartir contigo aprendizajes y experiencias de la vida.</br> Así que disfruta de la página <hr> </td>
+                        He creado este sitio web para compartir contigo aprendizajes y experiencias de la vida.</br> 
+                        Así que disfruta de la página </br>
+                        <img src="images/foto.jpg" alt="foto" title="foto"  width="210" height="200"/><hr> 
+                    </td>
                 </tr>
                 
             </table>            
