--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="">
         <link rel="icon" href="images/mifavicon.jpg"/>
+        <link rel="stylesheet" href="styles/miestilo.css">
     </head>
 
     <body>
