moviendo css a carpeta

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="">
         <link rel="icon" href="images/mifavicon.jpg"/>
-        <link rel="stylesheet" href="styles/miestilo.css">
+        <link rel="stylesheet" href="styles/estilopersonal.css">
     </head>
 
     <body>
