--- a/index.html
+++ b/index.html
@@ -37,13 +37,13 @@
                         <a href="https://www.autobild.es/coches/ferrari">
                             <img src="https://pbs.twimg.com/profile_images/661864962441261057/qUCqpT4n.jpg" alt="banner de publicidad" width="200" height="200">
                         </a>
-                        <p> Los autos deportivos de Ferrari, con precios que superan los </br>
+                        <h5> Los autos deportivos de Ferrari, con precios que superan los </br>
                             140.000 dólares, apuntan a uno de los segmentos más exclusivos: </br>
                             los millonarios de gran poder adquisitivo. La marca que fuera  </br>
                             fundada por Enzo Ferrari también cuenta con uno de los logos  </br>
                             más queridos y prestigiados, con la imagen de un caballo negro: </br>
                             el “caballino rampante”. </br>
-                            <strong><em>Enzo, el artesano</em></strong></p>
+                            <strong><em>Enzo, el artesano</em></strong></h5>
                     </td>
                 </tr>
 
