--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <link rel="stylesheet" href="">
         <link rel="icon" href="images/mifavicon.jpg"/>
         <link rel="stylesheet" href="styles/estilopersonal.css">
+        
     </head>
 
     <body>
@@ -29,9 +30,12 @@
             <a href="contact.html" target="_blank"><strong>&nbsp; &nbsp;Contact&nbsp;&nbsp;</strong></a> <hr>
         </nav>
 
-       
+        <section>
+
+        </section>
+
         <aside>
-            <table>
+            <table id="table1">
                 <tr>
                     <td> <h3>Banner de publicidad de autos </h3> 
                         <a href="https://www.autobild.es/coches/ferrari">
