--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
         <title>Home</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="">
         <link rel="icon" href="images/mifavicon.jpg"/>
         <link rel="stylesheet" href="styles/estilopersonal.css">
         <script src="https://kit.fontawesome.com/e66a617132.js" crossorigin="anonymous"></script>
@@ -57,7 +56,7 @@
             <ul>
               <li><a href="#"><i class="fa fa-facebook-square" aria-hidden="true"></i></a></li>
               <li><a href="#"><i class="fa fa-twitter-square" aria-hidden="true"></i></a></li>
-              <li><a href="#"><i class="fa fa-google-plus-square" aria-hidden="true"></i></i></a></li>
+              <li><a href="#"><i class="fa fa-google-plus-square" aria-hidden="true"></i></a></li>
               <li><a href="#"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a></li>
             </ul>
         
@@ -72,6 +71,6 @@
             <h5>&copy; Hubert Arturo Enriquez Chavez</h5>
         </footer>
 
-        <script src="" async defer></script>
+        
     </body>
 </html>
