--- a/contact.html
+++ b/contact.html
@@ -10,6 +10,8 @@
         <link rel="stylesheet" href="">
         <link rel="icon" href="images/mifavicon.jpg"/>
         <link rel="stylesheet" href="styles/estilopersonal.css">
+        <script src="https://kit.fontawesome.com/e66a617132.js" crossorigin="anonymous"></script>
+
 
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
     </head>
@@ -119,6 +121,16 @@
 
         <div class="clearfix"></div>
 
+        <div class="social">
+            <ul>
+              <li><a href="#" target="_blank" class="fa fa-facebook-square"></a></li>
+              <li><a href="#" target="_blank" class="fa fa-twitter-square"></a></li>
+              <li><a href="#" target="_blank" class="fa fa-google-plus-square"></a></li>
+              <li><a href="#" target="_blank" class="fa fa-linkedin-square"></a></li>
+              
+            </ul>
+          </div>
+          
         <br/>
         <footer>                    
             <h5>&copy; Hubert Arturo Enriquez Chavez</h5>
