--- a/lab05.html
+++ b/lab05.html
@@ -35,7 +35,7 @@
                             &nbsp;&nbsp;&nbsp;&nbsp;
                         </td>
                         <td>
-                            <button type="button" id="btn_extraer" onclick="extra();">Extraer</button>
+                            <button type="button" id="btn_extraer" onclick="extraccion();">Extraer</button>
                             <button type="button" id="btn_colorear" onclick="changeColor();">Colorear</button>
                         </td>
                     </tr>
@@ -45,7 +45,7 @@
                             <label>Fecha de nacimiento</label>
                         </td>
                         <td>
-                            <input class="controls" type="date" name="fecha"> <br>
+                            <input class="controls" type="date" name="fecha" id="fecha"> <br>
                         </td>
                         <td>
 
@@ -80,11 +80,11 @@
                     <td>
                         &nbsp;&nbsp;&nbsp;&nbsp;
                     </td>
-                    <td  class="naranja">
+                    <td id="a6" class="naranja">
                         <label>Longitud del apellido: </label>
                     </td>
                     <td>
-                        <input type="text" name="la" id="la"> <br/>
+                        <input type="text" name="lap" id="lap"> <br/>
                     </td>
                 </tr>
 
@@ -101,7 +101,7 @@
                         &nbsp;&nbsp;&nbsp;&nbsp;
                     </td>
 
-                    <td  class="naranja">
+                    <td id="a7" class="naranja">
                         <label>Edad:</label>
                         
                     </td>
@@ -122,11 +122,11 @@
                         &nbsp;&nbsp;&nbsp;&nbsp;
                     </td>
 
-                    <td  class="naranja">
+                    <td  id ="a8" class="naranja">
                         <label>Mes en letras:</label>
                     </td>
                     <td>
-                        <input type="text" name="ext_nom" id="ext_nom">
+                        <input type="text" name="mesl" id="mesl">
                     </td>
                 </tr>
             </table>           
