--- a/about.html
+++ b/about.html
@@ -69,7 +69,7 @@
                 
                 <div class="col">
                   <div class="card">
-                    <img width="200px" height="250px" src="https://s3.amazonaws.com/web-front-end-mx-content/content/images/2019/07/bolsa-de-valores.jpg" class="card-img-top" alt="bv">
+                    <img width="200px" height="250px" src="https://www.shutterstock.com/image-illustration/detailed-stock-market-data-display-600nw-2466835047.jpg" class="card-img-top" alt="bv">
                     <div class="card-body">
                       <h5 class="card-title">Inversión en la bolsa de valores</h5>
                       <p class="card-text">Posibilita generar mayores rendimientos. Está demostrado que con el tiempo, el mercado tiende a subir de valor, aunque los precios de las acciones individuales suban y bajen a diario.</p>
