--- a/about.html
+++ b/about.html
@@ -235,7 +235,7 @@
 
                   <div class="col">
                     <div class="card">
-                      <img width="200px" height="250px" src="https://i.ytimg.com/vi/KnOsSi-9yZY/maxresdefault.jpg" class="card-img-top" alt="kuntur">
+                      <img width="200px" height="250px" src="https://upload.wikimedia.org/wikipedia/commons/4/4e/Ciudad_de_Cajabamba.jpg" class="card-img-top" alt="kuntur">
                       <div class="card-body">
                         <h5 class="card-title">Cajabamba</h5>
                         <p class="card-text">La provincia de Cajabamba se encuentra situada en la parte sur del departamento de Cajamarca. </p>
