--- a/contact.html
+++ b/contact.html
@@ -22,9 +22,9 @@
             <div>
               <h3>Contáctame</h3>
               <nav class="nav nav-masthead justify-content-center float-md-end">
-                <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                <a class="nav-link " aria-current="page" href="index.html">Home</a>
                 <a class="nav-link" href="about.html">About</a>
-                <a class="nav-link" href="contact.html">Contact</a>
+                <a class="nav-link active" href="contact.html">Contact</a>
               </nav>
             </div>
             
