--- a/about.html
+++ b/about.html
@@ -25,8 +25,8 @@
             <div>
               <h3>Acerca de mí</h3>
               <nav class="nav nav-masthead justify-content-center float-md-end">
-                <a class="nav-link active" aria-current="page" href="index.html">Home</a>
-                <a class="nav-link" href="about.html">About</a>
+                <a class="nav-link" aria-current="page" href="index.html">Home</a>
+                <a class="nav-link active" href="about.html">About</a>
                 <a class="nav-link" href="contact.html">Contact</a>
               </nav>
             </div>
