--- a/contact.html
+++ b/contact.html
@@ -31,9 +31,8 @@
         </header>
        <!-- Sección Contacto -->
     <section class="container py-5">
-        <h2 class="text-center fw-bold mb-4">Contáctame</h2>
-        <p class="text-center text-muted mb-5">Rellena el formulario y me pondré en contacto contigo lo antes posible.</p>
-
+        <h2 class="text-center fw-bold mb-4 text-white">Contáctame</h2>
+        
         <div class="row justify-content-center">
             <div class="col-md-6">
                 <form action="https://formspree.io/f/your-id" method="POST" class="p-4 border rounded shadow-sm">
