--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
 
         <section class="box">
-            <img src="images/foto.jpg" alt="foto" title="foto" width="180" class="box-img">
+            <img src="images/fotoo.jpg" alt="foto" title="foto" width="180" class="box-img">
             <h1>Arturo Enriquez</h1>
             <h2>Ingeniero de Sistemas</h2>
             <p>Es un gusto saludarte, mi nombre es Arturo Enriquez y estudio ingeniería de Sistemas.
@@ -54,7 +54,7 @@
                
         <footer>
             
-            <h5>&copy; Hubert Arturo Enriquez Chavez</h5>
+            <h5>&copy; Arturo Enriquez</h5>
         </footer> 
     </body>
 </html>
