--- a/contact.html
+++ b/contact.html
@@ -69,7 +69,7 @@
           
         <br/>
         <footer>                    
-            <h5>&copy; Hubert Arturo Enriquez Chavez</h5>
+            <h5>&copy; Arturo Enriquez</h5>
         </footer>
 
         <script src="" async defer></script>
