--- a/about.html
+++ b/about.html
@@ -341,7 +341,7 @@
         </div>
 
         <footer>
-            <h5>&copy; Hubert Arturo Enriquez Chavez</h5>
+            <h5>&copy; Arturo Enriquez</h5>
         </footer>
         
        <!-- JavaScript Bundle with Popper -->
